--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 aiohttp==3.8.4
+aiohttp-session==2.12.0
+aiohttp-apispec==2.2.3
 alembic==1.9.4
+asyncpg==0.27.0
 SQLAlchemy==2.0.4
 ruamel.yaml==0.17.21
