--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ alembic==1.9.4
 asyncpg==0.27.0
 SQLAlchemy==2.0.4
 ruamel.yaml==0.17.21
+pytest==7.2.2
+pytest-aiohttp==1.0.4
+pytest-asyncio==0.20.3
